# infotex_test

./: .gitignore  .gitlab-ci.yaml  .gitlab-ci.yml  CMakeLists.txt  Dockerfile  README.md  TZ-DevOps.docx  Vagrantfile  all_in_vagrant.yaml  install_docker.yaml  inventory.ini
